fix button spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,3 +113,7 @@ nav > a {
 .mt-4 {
   z-index: 2;
 }
+
+.music {
+  margin-left: 20px;
+}
